# HorseRacing

./: Anchor.toml  README.md  package-lock.json  package.json
app/frontend/: package-lock.json  package.json  tailwind.config.ts
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/app/howtobuy/: page.tsx
app/frontend/src/app/launchapp/: page.tsx
app/frontend/src/app/tokenomics/: page.tsx
app/frontend/src/components/Layout/: CustomLayout.tsx  DexIcon.tsx  Footer.tsx  Header.tsx  LaunchIcon.tsx
programs/horse_racing/: Cargo.toml
programs/horse_racing/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs
tests/: horse_racing.ts
